# anilistarr-rs

./: .clippy.toml  .editorconfig  .env  .envrc  .gitignore  .lefthook.yaml  Cargo.toml  README.md  SECURITY.md  TODO.md  Taskfile.yaml  openapi.yaml  shell.nix
graphql/anilist/: GetUserByName.gql  GetWatching.gql
src/: lib.rs
src/adapters/: mod.rs
src/adapters/mappers/: memory.rs  mod.rs  persistent.rs
src/adapters/trackers/: cachedtracker.rs  mod.rs
src/drivers/: mod.rs
src/drivers/api/: handlers.rs  mod.rs
src/drivers/caches/: lmdb.rs  mod.rs  redis.rs
src/drivers/persistence/: lmdb.rs  mod.rs
src/drivers/providers/: anilist.rs  mod.rs
src/drivers/stores/: mod.rs
src/drivers/trackers/: anilist.rs  memory.rs  mod.rs
src/entities/: customlist.rs  media.rs  mod.rs
src/usecases/: cache.rs  errors.rs  getter.rs  mapper.rs  medialister.rs  metadata.rs  mod.rs  provider.rs  store.rs  tracker.rs
